alignment fix

--- a/src/components/Contactme/Contact.css
+++ b/src/components/Contactme/Contact.css
@@ -38,7 +38,7 @@
   justify-content: center;
   position: absolute;
   bottom: -20px;
-  left: 23%;
+  left: 23.5%;
   cursor: pointer;
   animation: zoom 2s infinite;
 }
